2008-12-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_scrollbar_slider):
	* src/murrine_style.c (murrine_style_draw_box):
	Draw rounded scrollbars sliders when GtkRange::trough-border > 0.

2008-12-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Fixed a small bug in the progressbar.

2008-12-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_menuitem):
	Use lightborder_ratio of the theme,
	please disable it in the gtkrc if you don't want it.

2008-12-14  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/support.c (murrine_scrollbar_visible_steppers):
	Fixed murrine_scrollbar_visible_steppers,
	patch by Ivan N. Zlatev, thanks!

2008-11-30  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Fixed a memory leak. Thanks to Paolo Borelli.

2008-10-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Let's return when detail is buttondefault, should fix bug #555891.

2008-10-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (murrine_draw_new_glossy_highlight),
	(murrine_draw_glow), (murrine_draw_glaze):
	* src/cairo-support.h:
	New glazestyle (5, let's test), declared some methods as static,
	removing them from the header file

2008-10-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (murrine_rgb_to_hls), (murrine_hls_to_rgb),
	(murrine_shade), (murrine_mix_color), (murrine_gdk_color_to_rgb),
	(get_decreased_ratio), (get_increased_ratio):
	* src/murrine_draw.c (murrine_draw_inset), (murrine_draw_button),
	(murrine_draw_entry), (murrine_draw_spinbutton_down),
	(murrine_draw_scale_trough), (murrine_draw_progressbar_trough),
	(murrine_draw_progressbar_fill), (murrine_draw_optionmenu),
	(murrine_draw_menubar), (murrine_draw_toolbar),
	(murrine_draw_frame), (murrine_draw_tab), (murrine_draw_separator),